unpackaged/main/default/objects/Activity/fields/Best_Time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Call__c</fullName>
    <label>Best Time to Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>