unpackaged/main/default/objects/Activity/fields/Care_Intervention_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Intervention_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Intervention Type</label>
    <referenceTo>CareInterventionType</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>