unpackaged/main/default/objects/Activity/fields/Follow_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_By__c</fullName>
    <label>Follow Up By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>