unpackaged/main/default/objects/Activity/fields/Topics_to_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Topics_to_Discuss__c</fullName>
    <label>Topics to Discuss</label>
    <type>TextArea</type>
</CustomField>